# Scientist-Bin

./: .gitignore  README.md  TEST_COVERAGE_ANALYSIS.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  start.bat  start.sh
backend/framework_venvs/analyst/: pyproject.toml
backend/framework_venvs/diffusers/: pyproject.toml
backend/framework_venvs/pytorch-cpu/: pyproject.toml
backend/framework_venvs/pytorch-gpu/: pyproject.toml
backend/framework_venvs/tensorflow/: pyproject.toml
backend/framework_venvs/traditional/: pyproject.toml
backend/framework_venvs/transformers/: pyproject.toml
backend/src/scientist_bin_backend/: cli.py  main.py
backend/src/scientist_bin_backend/agents/: README.md
backend/src/scientist_bin_backend/agents/analyst/: README.md  agent.py  graph.py  prompts.py  schemas.py  states.py  utils.py
backend/src/scientist_bin_backend/agents/analyst/nodes/: data_cleaner.py  data_profiler.py  data_splitter.py  report_writer.py
backend/src/scientist_bin_backend/agents/base/: README.md  __init__.py  agent.py  graph.py  prompts.py  schemas.py  states.py  utils.py
backend/src/scientist_bin_backend/agents/base/nodes/: __init__.py  code_executor.py  code_validator.py  data_analyzer.py  results_analyzer.py  test_evaluator.py
backend/src/scientist_bin_backend/agents/base/prompts/: __init__.py  templates.py
backend/src/scientist_bin_backend/agents/campaign/: README.md  __init__.py  agent.py  graph.py  prompts.py  schemas.py  states.py
backend/src/scientist_bin_backend/agents/campaign/nodes/: budget_checker.py  experiment_runner.py  hypothesis_generator.py  insight_extractor.py
backend/src/scientist_bin_backend/agents/central/: README.md  agent.py  graph.py  prompts.py  schemas.py  states.py  utils.py
backend/src/scientist_bin_backend/agents/central/nodes/: analyzer.py  router.py
backend/src/scientist_bin_backend/agents/central/prompts/: templates.py
backend/src/scientist_bin_backend/agents/frameworks/: README.md
backend/src/scientist_bin_backend/agents/frameworks/flaml/: README.md  agent.py  prompts.py  schemas.py  states.py
backend/src/scientist_bin_backend/agents/frameworks/flaml/nodes/: code_generator.py  error_researcher.py
backend/src/scientist_bin_backend/agents/frameworks/flaml/skills/classification/: SKILL.md  reference.md
backend/src/scientist_bin_backend/agents/frameworks/flaml/skills/regression/: SKILL.md  reference.md
backend/src/scientist_bin_backend/agents/frameworks/flaml/skills/ts_forecast/: SKILL.md  reference.md
backend/src/scientist_bin_backend/agents/frameworks/sklearn/: README.md  agent.py  prompts.py  states.py
backend/src/scientist_bin_backend/agents/frameworks/sklearn/nodes/: code_generator.py  error_researcher.py
backend/src/scientist_bin_backend/agents/frameworks/sklearn/skills/: README.md
backend/src/scientist_bin_backend/agents/frameworks/sklearn/skills/classification/: SKILL.md  reference.md
backend/src/scientist_bin_backend/agents/frameworks/sklearn/skills/clustering/: SKILL.md  reference.md
backend/src/scientist_bin_backend/agents/frameworks/sklearn/skills/evaluation/: SKILL.md  reference.md
backend/src/scientist_bin_backend/agents/frameworks/sklearn/skills/preprocessing/: SKILL.md  reference.md
backend/src/scientist_bin_backend/agents/frameworks/sklearn/skills/regression/: SKILL.md  reference.md
backend/src/scientist_bin_backend/agents/plan/: README.md  agent.py  graph.py  prompts.py  schemas.py  states.py
backend/src/scientist_bin_backend/agents/plan/nodes/: _context.py  plan_reviewer.py  plan_saver.py  plan_writer.py  query_rewriter.py  researcher.py
backend/src/scientist_bin_backend/agents/plan/prompts/: templates.py
backend/src/scientist_bin_backend/agents/sklearn/: README.md  agent.py  graph.py  schemas.py  states.py  utils.py
backend/src/scientist_bin_backend/agents/sklearn/nodes/: code_generator.py  evaluator.py  planner.py
backend/src/scientist_bin_backend/agents/sklearn/prompts/: templates.py
backend/src/scientist_bin_backend/agents/sklearn/skills/: SKILL.md
backend/src/scientist_bin_backend/agents/sklearn/skills/classification/: SKILL.md
backend/src/scientist_bin_backend/agents/summary/: README.md  agent.py  graph.py  prompts.py  schemas.py  states.py
backend/src/scientist_bin_backend/agents/summary/nodes/: artifact_saver.py  context_collector.py  diagnostics_computer.py  experiment_reviewer.py  model_selector.py  report_generator.py  reviewer.py
backend/src/scientist_bin_backend/agents/summary/prompts/: templates.py
backend/src/scientist_bin_backend/api/: README.md  experiments.py  routes.py
backend/src/scientist_bin_backend/config/: README.md  settings.py
backend/src/scientist_bin_backend/deploy/: README.md  __init__.py  builder.py  templates.py
backend/src/scientist_bin_backend/events/: README.md  __init__.py  bus.py  types.py
backend/src/scientist_bin_backend/execution/: README.md  __init__.py  budget.py  estimator.py  journal.py  metrics_bridge.py  runner.py  sandbox.py  templates.py
backend/src/scientist_bin_backend/memory/: README.md  __init__.py  erl_journal.py  findings_store.py
backend/src/scientist_bin_backend/utils/: README.md  artifacts.py  llm.py  naming.py  skill_loader.py
backend/tests/: README.md  conftest.py  e2e_helpers.py  test_api.py  test_cli.py  test_contracts.py  test_e2e_api_flaml.py  test_e2e_flaml.py  test_e2e_pipeline.py  test_event_sync.py  test_routes_utils.py  test_settings.py
backend/tests/agents/: test_analyst.py  test_base_framework.py  test_central.py  test_code_validator_async.py  test_error_correction.py  test_flaml.py  test_plan.py  test_results_analyzer_fw.py  test_sklearn.py  test_summary.py
backend/tests/events/: test_bus.py
backend/tests/execution/: test_budget.py  test_estimator.py  test_flaml_codegen.py  test_framework_python.py  test_journal.py  test_metrics_bridge.py  test_runner_integration.py  test_sandbox.py  test_templates.py  test_watch_metrics.py
backend/tests/utils/: test_artifacts.py  test_llm.py  test_naming.py  test_skill_loader.py
frontend/: .gitignore  README.md  (+11 more)
(+199 files in other folders)
