[project]
name = "scientist_bin_backend"
version = "0.1.0"
description = "Multi-agent system for automated data science model training and evaluation"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "langchain-google-genai",
    "google-genai",
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "typer",
    "python-dotenv",
    "httpx",
    # Data science execution dependencies (used by sandboxed subprocess)
    "pandas",
    "scikit-learn",
    "joblib",
    "matplotlib",
    # FLAML AutoML execution dependencies (used by sandboxed subprocess)
    "flaml[automl,forecast]",
    "statsmodels",
]

[project.scripts]
scientist-bin = "scientist_bin_backend.cli:app"

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scientist_bin_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (run with -m slow)",
    "timeout: set a timeout for a test (requires pytest-timeout plugin)",
]

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
