[project]
name = "scientist-bin-pytorch-cpu"
version = "0.1.0"
description = "ML execution environment for PyTorch (CPU only)"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6",
    "torchvision>=0.21",
    "pandas",
    "numpy",
    "joblib",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
