[project]
name = "scientist-bin-transformers"
version = "0.1.0"
description = "ML execution environment for Hugging Face Transformers"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.47",
    "torch>=2.6",
    "sentencepiece",
    "pandas",
    "numpy",
    "joblib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
